[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/spaceship.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/gas.png" type="Texture" id=3]
[ext_resource path="res://assets/explosion/4xjg-7.png" type="Texture" id=4]
[ext_resource path="res://assets/explosion/4xjg-6.png" type="Texture" id=5]
[ext_resource path="res://assets/explosion/4xjg-11.png" type="Texture" id=6]
[ext_resource path="res://assets/explosion/4xjg-9.png" type="Texture" id=7]
[ext_resource path="res://assets/explosion/4xjg-10.png" type="Texture" id=8]
[ext_resource path="res://assets/explosion/4xjg-8.png" type="Texture" id=9]
[ext_resource path="res://assets/explosion/4xjg-0.png" type="Texture" id=10]
[ext_resource path="res://assets/explosion/4xjg-2.png" type="Texture" id=11]
[ext_resource path="res://assets/explosion/4xjg-1.png" type="Texture" id=12]
[ext_resource path="res://assets/explosion/4xjg-5.png" type="Texture" id=13]
[ext_resource path="res://assets/explosion/4xjg-4.png" type="Texture" id=14]
[ext_resource path="res://assets/explosion/4xjg-3.png" type="Texture" id=15]
[ext_resource path="res://assets/sound/explode.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sound/shoot.wav" type="AudioStream" id=17]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, -25.5, -23.6, 0, -23.6, 25.2, 23.5, 25.2, 23.5, 0 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), null ],
"loop": false,
"name": "die",
"speed": 16.0
} ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 500, 300 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.0809937 )
shape = SubResource( 1 )

[node name="Gun" type="Node2D" parent="."]
position = Vector2( -3.05176e-05, -36.3177 )

[node name="Gas1" type="Sprite" parent="."]
position = Vector2( -7.70508, 28.3945 )
rotation = 1.5708
scale = Vector2( 0.04, 0.05 )
texture = ExtResource( 3 )

[node name="Gas2" type="Sprite" parent="."]
position = Vector2( 8.33252, 28.3604 )
rotation = 1.5708
scale = Vector2( 0.04, 0.05 )
texture = ExtResource( 3 )

[node name="Animated" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.252197, 0.976807 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 2 )
animation = "die"

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="FireSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
